# neat-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Flow:  LICENSE  Makefile  README.md  build.sh  make.sh
.devcontainer/: Dockerfile  devcontainer.json
examples/: CMakeLists.txt
examples/mountaincar_example/: CMakeLists.txt  mountaincar.cpp  mountaincar_example.cpp
examples/mountaincar_example/config/: mountaincar_example.cfg
examples/xor_example/: CMakeLists.txt  xor_example.cpp
examples/xor_example/config/: xor_example.cfg
include/: activations.h  aggregations.h  attributes.h  config_parser.h  genes.h  genome.h  neat.h  population.h  random_generator.h  species.h
src/: CMakeLists.txt  activations.cpp  aggregations.cpp  attributes.cpp  config_parser.cpp  genes.cpp  genome.cpp  main.cpp  population.cpp  species.cpp
tests/: CMakeLists.txt
tests/aggregation_tests/: CMakeLists.txt  aggregation_tests.cpp
tests/attribute_tests/: CMakeLists.txt  attribute_tests.cpp
tests/config_parser_tests/: CMakeLists.txt  config_parser_tests.cpp
tests/config_parser_tests/config/: space_test.cfg  test_config.cfg
tests/gene_tests/: CMakeLists.txt  connection_gene_tests.cpp  node_gene_tests.cpp
tests/genome_tests/: CMakeLists.txt  ForwardTest.cfg  ValidConfig.cfg  ValidConfigIndirect copy.cfg  ValidConfigIndirectNoHidden.cfg  ValidConfigNoHidden.cfg  genome_config_tests.cpp  genome_tests.cpp
tests/genome_tests/config/: GenomeActivateConfig.cfg  MissingField.cfg  MutateConnAdd.cfg  MutateConnDel.cfg  MutateNodeAdd.cfg  MutateNodeDel.cfg  MyConfig.cfg  NoDefaultGenome.cfg
tests/population_tests/: CMakeLists.txt  population_test.cpp
tests/population_tests/config/: ValidConfig.cfg
tests/species_tests/: CMakeLists.txt  species_test.cpp
tests/species_tests/config/: GenomeConfig1.cfg  GenomeConfig2.cfg
