# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/attribute_tests)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/config_parser_tests)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/gene_tests)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/aggregation_tests)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/genome_tests)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/species_tests)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/population_tests)
